# ncc-video-extractor

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
ncc_video_extractor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
