[project]
name = "ncc-video-extractor"
version = "0.1.0"
description = "A tool for downloading videos (especially Vimeo) using yt-dlp and transcribing audio using OpenAI Whisper"
readme = "README.md"
requires-python = ">3.8, <3.12"
dependencies = [
    "openai-whisper>=20240930",
    "yt-dlp[curl-cffi,default]>=2024.10.22",
]
